added html report to modify template